Visual improvement of navbar right side actions buttons.

--- a/.github/workspace/deploy.yml
+++ b/.github/workspace/deploy.yml
@@ -1,5 +1,5 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Deploy to GitHub Pages
 
 on:
   # Runs on pushes targeting the default branch
@@ -31,13 +31,26 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
+        with:
+          # Enable custom domain
+          enablement: true
+
+      - name: Configure Custom Domain
+        run: |
+          echo "dev.superhosting.vip" > CNAME
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
-          path: 'xerudro/superhosting'
+          # Upload the root directory
+          path: '.'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          # Enable custom domain
+          custom_domain: dev.superhosting.vip
